bugfix for demo app mobile version, where text and images in demoCarousell overlapped

--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -1,8 +1,12 @@
 // improt SIA fonts
 @import url("https://use.typekit.net/ikv5rmz.css");
 @font-face {
+    font-family: 'Sigvar Serial Bold';
+    src: '../public/fonts/sigvar-serial-bold.ttf';
+}
+@font-face {
     font-family: 'Sigvar Serial';
-    src: './public/sigvar-serial-bold.ttf';
+    src: '../public/fonts/Sigvar-Serial-Regular.ttf';
 }
 
 
