--- a/styles/demo.module.scss
+++ b/styles/demo.module.scss
@@ -140,8 +140,10 @@
         grid-template-rows: 1fr;
         grid-template-columns: 40% 1fr;
         @include mobile-layout{
-            grid-template-rows: 1fr;
+            grid-template-rows: 1fr auto;
+            row-gap: 1ch;
             grid-template-columns: 1fr;
+            
         }
         text-align: left;
         border-bottom: 2px solid rgba(189, 189, 189, 0.522);
